orElseThrow fixes and minor fixes added